--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
