--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
 
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
+          buildpack: heroku-buildpack-static
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "ids-frontend" #Must be unique in Heroku
           heroku_email: "riccardo.gilli@studenti.unitn.it"
