--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "ids-frontend" #Must be unique in Heroku
           heroku_email: "riccardo.gilli@studenti.unitn.it"
-          appdir: "frontend" # <- This will point to the api folder in your project
+          appdir: "/" # <- This will point to the api folder in your project
